--- a/themes/toha/layouts/partials/sections/about.html
+++ b/themes/toha/layouts/partials/sections/about.html
@@ -12,7 +12,7 @@
   <div class="row pt-sm-2 pt-md-4 align-self-center">
     <!-- summary -->
     <!-- takes up full section width if no badges/soft skills are specified -->
-    {{ if or (.softSkills) (.badges) }} <div class="col-sm-6"> {{ else }} <div class="col-sm-12"> {{ end }}
+    {{ if or (.softSkills) (.badges) }} <div id="badges-div" class="col-sm-6"> {{ else }} <div id="badges-div" class="col-sm-12"> {{ end }}
       <h3 class="p-1">{{ $author.name }}</h3>
       {{ if .designation }}
       <h5 class="p-1">
