--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,8 @@
 /* iPhone 5 or before */
 @media only screen and (max-width: 320px) {
 }
+
+#badges-div img {
+    background-color: lightslategray;
+    border-radius: 100%;
+}
