--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,6 @@
 }
 
 #badges-div img {
-    background-color: lightslategray;
+    background-color: rgb(255, 255, 255);
     border-radius: 100%;
 }
